Fixing font-size issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,9 @@ button, .button {
   padding: 0.55em 0.8em 0.5em; }
   .button-lg:active {
     margin-top: 6px; }
-  @media screen and (max-width: 405px) {
+  @media screen and (max-width: 450px) {
     .button-lg {
-      font-size: 2.5em; } }
+      font-size: 2.25em; } }
 
 .style-green {
   background-color: #5fcf80;
