--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -46,8 +46,8 @@ button, .button {
   &:active {
     margin-top: 6px;
   }
-  @media screen and (max-width: 405px) {
-    font-size: 2.5em;
+  @media screen and (max-width: 450px) {
+    font-size: 2.25em;
   }
 }
 
